fmt_import/src/snapshots/fmt_import__import_manager__test__one_block_one_import.snap
---
source: fmt_import/src/import_manager.rs
expression: processor.find_all_imports(content)
---
[
    ImportBlock {
        start_idx: 1,
        end_index: 1,
        imports: [
            "            use crate::import_manager::Import::{MultiLine, SingleLine};",
        ],
    },
]
