fmt_import/src/snapshots/fmt_import__import_manager__test__three_blocks_many_imports.snap
---
source: fmt_import/src/import_manager.rs
expression: processor.find_all_imports(content)
---
[
    ImportBlock {
        start_idx: 1,
        end_index: 3,
        imports: [
            "            use crate::import_manager::ImportProcessor;",
            "            use crate::Config;",
            "            use eyre::{Context, Result};",
        ],
    },
    ImportBlock {
        start_idx: 6,
        end_index: 12,
        imports: [
            "                use ignore::gitignore::{Gitignore, GitignoreBuilder};",
            "                use std::path::{Path, PathBuf};",
            "                use crate::import_manager::Import::MultiLine;",
            "                use crate::import_manager::Import::SingleLine;",
        ],
    },
    ImportBlock {
        start_idx: 16,
        end_index: 17,
        imports: [
            "                use std::ffi::OsStr;",
            "                use ignore::Walk;",
        ],
    },
]
